--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
     <button id="foodButton" onclick="displayFood()">今天吃……</button>
 
     <script>
-        const foodTitle = document。getElementById('foodTitle');
-        const foodDisplay = document。getElementById('foodDisplay');
-        const foodButton = document。getElementById('foodButton');
+        const foodTitle = document.getElementById('foodTitle');
+        const foodDisplay = document.getElementById('foodDisplay');
+        const foodButton = document.getElementById('foodButton');
         const foods = ['面条'， '米饭'， '披萨'， '汉堡'， '寿司'， '炸鸡'， '沙拉'， '意大利面'， '炒饭'， '烤鸭'， '牛排'， '烤鱼'， '烤肉'， '火锅'， '煎饼'， '炒面'， '烤串'， '炖菜'， '炒菜'， '烤翅'， '鸡尾酒'， '汤'， '烤比萨'， '三明治'， '墨西哥卷饼'， '烤牛肉'， '寿喜烧'， '炒河粉'， '炒米粉'， '炒粿条'， '炒冬粉'， '炒年糕'， '烤章鱼'， '章鱼小丸子'， '炒包菜'， '烤茄子'， '炸薯条'， '炸鱼'， '炸虾'， '烤鳗鱼'， '烤鳗鱼寿司'， '炒甜椒'， '烤甜椒'， '烤玉米'， '炒青菜'， '炒西兰花'， '炒豆芽'， '炒菠菜'， '烤南瓜'， '烤土豆'， '烤胡萝卜'， '烤洋葱'， '炒蘑菇'， '烤菠萝'， '烤香蕉'， '烤苹果'， '烤橙子'， '炸冰淇淋'， '炸甜甜圈'， '烤面包'， '炸馒头'， '烤煎饼'， '炒红薯'， '烤花生'， '烤腰果'， '炸花生'， '烤榛子'， '烤开心果'， '炒杏仁'， '烤核桃'， '烤南瓜子'， '炸果仁'， '炒瓜子'， '炸葵花籽'， '烤松子'， '烤葵花籽'， '烤葡萄'， '炒葡萄干'， '炒栗子'， '烤栗子'， '炒豌豆'， '烤豌豆'， '炸豆腐'， '烤豆腐'， '烤馒头'， '炸馒头'， '炒豆腐干'， '烤豆腐干'， '炒杂粮'， '烤杂粮'， '炸鸡翅'， '烤鸡翅'， '炒虾仁'， '烤虾仁'， '炒鱼丸'， '烤鱼丸'， '炒肉丸'， '烤肉丸'， '炒蔬菜'， '烤蔬菜'， '炒水果'， '烤水果'， '炸猪排'， '烤猪排'， '炒牛肉'， '烤牛肉'， '炒羊肉'， '烤羊肉'];// 这里列出你希望显示的食物名称
         let currentInterval;
 
