--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <!--声明编码-->
 <meta charset="utf-8">
 <html>
+
 <head>
     <!--导入Google Fonts,因为网络原因可能加载不出,主要是试试导入字体,之后可能会修改字体源-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -20,27 +21,33 @@
             height: 100vh;
             margin: 0;
         }
+
         #foodTitle {
-            font-family: 'Noto Sans SC', sans-serif;    /* 这里是导入的字体 */
+            font-family: 'Noto Sans SC', sans-serif;
+            /* 这里是导入的字体 */
             font-size: 64px;
-            color:white;
+            color: white;
             background: black;
             text-align: center;
             margin-bottom: 20px;
         }
+
         #foodTitle span。left {
-            background-color: rgb(255, 170, 0); /* 设置部分背景颜色为黄色 */
-            color:black;
+            background-color: rgb(255, 170, 0);
+            /* 设置部分背景颜色为黄色 */
+            color: black;
             padding: 0 10px;
             margin-left: 10px;
             margin-right: 10px;
         }
+
         #foodDisplay {
             font-size: 20px;
             text-align: center;
             margin-bottom: 20px;
-            color:rgb(255, 170, 0);
+            color: rgb(255, 170, 0);
         }
+
         #foodButton {
             border-radius: 10px;
             padding: 10px 20px;
@@ -51,8 +58,9 @@
         }
     </style>
 </head>
+
 <body>
-    <div id="foodTitle"><span class="left">今天中午</span>吃什么？</div>
+    <div id="foodTitle"><span class="left">今天</span>吃什么？</div>
     <div id="foodDisplay">👇点击来测</div>
     <button id="foodButton" onclick="displayFood()">今天吃……</button>
 
@@ -60,7 +68,11 @@
         const foodTitle = document.getElementById('foodTitle');
         const foodDisplay = document.getElementById('foodDisplay');
         const foodButton = document.getElementById('foodButton');
-        const foods = ['面条', '米饭', '披萨', '汉堡', '寿司', '炸鸡', '沙拉', '意大利面', '炒饭', '烤鸭', '牛排', '烤鱼', '烤肉', '火锅', '煎饼', '炒面', '烤串', '炖菜', '炒菜', '烤翅', '鸡尾酒', '汤', '烤比萨', '三明治', '墨西哥卷饼', '烤牛肉', '寿喜烧', '炒河粉', '炒米粉', '炒粿条', '炒冬粉', '炒年糕', '烤章鱼', '章鱼小丸子', '炒包菜', '烤茄子', '炸薯条', '炸鱼', '炸虾', '烤鳗鱼', '烤鳗鱼寿司', '炒甜椒', '烤甜椒', '烤玉米', '炒青菜', '炒西兰花', '炒豆芽', '炒菠菜', '烤南瓜', '烤土豆', '烤胡萝卜', '烤洋葱', '炒蘑菇', '烤菠萝', '烤香蕉', '烤苹果', '烤橙子', '炸冰淇淋', '炸甜甜圈', '烤面包', '炸馒头', '烤煎饼', '炒红薯', '烤花生', '烤腰果', '炸花生', '烤榛子', '烤开心果', '炒杏仁', '烤核桃', '烤南瓜子', '炸果仁', '炒瓜子', '炸葵花籽', '烤松子', '烤葵花籽', '烤葡萄', '炒葡萄干', '炒栗子', '烤栗子', '炒豌豆', '烤豌豆', '炸豆腐', '烤豆腐', '烤馒头', '炸馒头', '炒豆腐干', '烤豆腐干', '炒杂粮', '烤杂粮', '炸鸡翅', '烤鸡翅', '炒虾仁', '烤虾仁', '炒鱼丸', '烤鱼丸', '炒肉丸', '烤肉丸', '炒蔬菜', '烤蔬菜', '炒水果', '烤水果', '炸猪排', '烤猪排', '炒牛肉', '烤牛肉', '炒羊肉', '烤羊肉'];// 这里列出你希望显示的食物名称
+        const foods = [
+            '面条', '米饭', '披萨', '汉堡', '寿司', '炸鸡', '沙拉', '意大利面', '炒饭', '烤鸭', '牛排', '烤鱼', '烤肉', '火锅', '煎饼', '炒面', '烤串', '炖菜', '炒菜', '烤翅', '鸡尾酒', '汤', '烤比萨', '三明治', '墨西哥卷饼', '烤牛肉', '寿喜烧', '炒河粉', '炒米粉', '炒粿条', '炒冬粉', '炒年糕', '烤章鱼', '章鱼小丸子', '炒包菜', '烤茄子', '炸薯条', '炸鱼', '炸虾', '烤鳗鱼', '烤鳗鱼寿司', '炒甜椒', '烤甜椒', '烤玉米', '炒青菜', '炒西兰花', '炒豆芽', '炒菠菜', '烤南瓜', '烤土豆', '烤胡萝卜', '烤洋葱', '炒蘑菇', '烤菠萝', '烤香蕉', '烤苹果', '烤橙子', '炸冰淇淋', '炸甜甜圈', '烤面包', '炸馒头', '烤煎饼', '炒红薯', '烤花生', '烤腰果', '炸花生', '烤榛子', '烤开心果', '炒杏仁', '烤核桃', '烤南瓜子', '炸果仁', '炒瓜子', '炸葵花籽', '烤松子', '烤葵花籽', '烤葡萄', '炒葡萄干', '炒栗子', '烤栗子', '炒豌豆', '烤豌豆', '炸豆腐', '烤豆腐', '烤馒头', '炸馒头', '炒豆腐干', '烤豆腐干', '炒杂粮', '烤杂粮', '炸鸡翅', '烤鸡翅', '炒虾仁', '烤虾仁', '炒鱼丸', '烤鱼丸', '炒肉丸', '烤肉丸', '炒蔬菜', '烤蔬菜', '炒水果', '烤水果', '炸猪排', '烤猪排', '炒牛肉', '烤牛肉', '炒羊肉', '烤羊肉',
+            '馄饨', '烩面', '热干面', '刀削面', '油泼面', '炸酱面', '炒面', '重庆小面', '米线', '酸辣粉', '土豆粉', '螺狮粉', '凉皮儿', '麻辣烫', '肉夹馍', '羊肉泡馍', '炒饭', '盖浇饭', '烤肉饭', '黄焖鸡米饭', '麻辣香锅', '火锅', '酸菜鱼', '烤串', '披萨', '烤鸭', '汉堡', '炸鸡', '寿司', '煎饼果子', '南瓜粥', '小龙虾', '牛排', '砂锅', '大排档', '馒头', '西餐', '自助餐', '小笼包', '水果', '西北风', '烧烤', '泡面', '水饺', '日本料理', '涮羊肉', '兰州拉面', '肯德基', '面包', '臊子面', '小笼包', '麦当劳', '沙县小吃', '烤鱼', '海鲜', '铁板烧', '韩国料理', '甜点', '鸭血粉丝汤',
+
+        ];// 这里列出你希望显示的食物名称
         let currentInterval;
 
         function getRandomFood() {
@@ -100,4 +112,5 @@
         }
     </script>
 </body>
+
 </html>
