--- a/index.html
+++ b/index.html
@@ -71,6 +71,8 @@
         const foods = [
             '面条', '米饭', '披萨', '汉堡', '寿司', '炸鸡', '沙拉', '意大利面', '炒饭', '烤鸭', '牛排', '烤鱼', '烤肉', '火锅', '煎饼', '炒面', '烤串', '炖菜', '炒菜', '烤翅', '鸡尾酒', '汤', '烤比萨', '三明治', '墨西哥卷饼', '烤牛肉', '寿喜烧', '炒河粉', '炒米粉', '炒粿条', '炒冬粉', '炒年糕', '烤章鱼', '章鱼小丸子', '炒包菜', '烤茄子', '炸薯条', '炸鱼', '炸虾', '烤鳗鱼', '烤鳗鱼寿司', '炒甜椒', '烤甜椒', '烤玉米', '炒青菜', '炒西兰花', '炒豆芽', '炒菠菜', '烤南瓜', '烤土豆', '烤胡萝卜', '烤洋葱', '炒蘑菇', '烤菠萝', '烤香蕉', '烤苹果', '烤橙子', '炸冰淇淋', '炸甜甜圈', '烤面包', '炸馒头', '烤煎饼', '炒红薯', '烤花生', '烤腰果', '炸花生', '烤榛子', '烤开心果', '炒杏仁', '烤核桃', '烤南瓜子', '炸果仁', '炒瓜子', '炸葵花籽', '烤松子', '烤葵花籽', '烤葡萄', '炒葡萄干', '炒栗子', '烤栗子', '炒豌豆', '烤豌豆', '炸豆腐', '烤豆腐', '烤馒头', '炸馒头', '炒豆腐干', '烤豆腐干', '炒杂粮', '烤杂粮', '炸鸡翅', '烤鸡翅', '炒虾仁', '烤虾仁', '炒鱼丸', '烤鱼丸', '炒肉丸', '烤肉丸', '炒蔬菜', '烤蔬菜', '炒水果', '烤水果', '炸猪排', '烤猪排', '炒牛肉', '烤牛肉', '炒羊肉', '烤羊肉',
             '馄饨', '烩面', '热干面', '刀削面', '油泼面', '炸酱面', '炒面', '重庆小面', '米线', '酸辣粉', '土豆粉', '螺狮粉', '凉皮儿', '麻辣烫', '肉夹馍', '羊肉泡馍', '炒饭', '盖浇饭', '烤肉饭', '黄焖鸡米饭', '麻辣香锅', '火锅', '酸菜鱼', '烤串', '披萨', '烤鸭', '汉堡', '炸鸡', '寿司', '煎饼果子', '南瓜粥', '小龙虾', '牛排', '砂锅', '大排档', '馒头', '西餐', '自助餐', '小笼包', '水果', '西北风', '烧烤', '泡面', '水饺', '日本料理', '涮羊肉', '兰州拉面', '肯德基', '面包', '臊子面', '小笼包', '麦当劳', '沙县小吃', '烤鱼', '海鲜', '铁板烧', '韩国料理', '甜点', '鸭血粉丝汤',
+            '汉堡', '披萨', '寿司', '面条', '米饭', '沙拉', '炸鸡', '烤肉', '火锅', '炒饭', '煎饼', '饺子', '包子', '馄饨', '烧麦', '烤鸭', '牛排', '三明治', '热狗', '薯条', '冰淇淋', '蛋糕', '布丁', '奶茶', '咖啡', '果汁', '酸奶', '水果', '蔬菜', '海鲜', '烤肉饭', '鸡翅', '牛肉面', '羊肉串', '豆腐', '鸡蛋', '炒面', '炒粉', '炒年糕', '烤鱼', '寿喜锅', '鳗鱼饭', '天妇罗', '章鱼烧', '关东煮', '拉面', '乌冬面', '冷面', '石锅拌饭', '泡菜', '煎饺', '烧鹅', '叉烧', '卤肉饭', '咖喱饭', '蛋包饭',
+
 
         ];// 这里列出你希望显示的食物名称
         let currentInterval;
